tests/NormalTests/paczka1/fuzzy1/65717668.err
Error in line 1: pJgyXM0y A256 12,4
Error in line 3: pJgyXM0y A211 93,4
Error in line 5: 9sj6dL0HLN A256 36,1
Error in line 9: W6f A211 49,4
Error in line 12: W6f A537 41,9
Error in line 17: W6f S745 52,5
Error in line 40: raqwL4xO8U A256 81,92
